--- a/layouts/partials/volunteer-waiver-head.html
+++ b/layouts/partials/volunteer-waiver-head.html
@@ -1,4 +1,9 @@
 {{ if eq .Page.RelPermalink "/volunteer-waiver/" }}
 <link rel="stylesheet" href="/css/volunteer-waiver.css">
-<script src="/js/volunteer-waiver.js" defer></script>
+<script src="/js/auth-client.js"></script>
+<script>
+  // Initialize the auth client
+  window.authClient = new AuthClient();
+</script>
+<script src="/js/volunteer-waiver.js"></script>
 {{ end }}
