--- a/layouts/volunteer/single.html
+++ b/layouts/volunteer/single.html
@@ -2,7 +2,7 @@
 <!-- Load volunteer dashboard CSS -->
 <link rel="stylesheet" href="{{ "css/volunteer-dashboard.css" | relURL }}" />
 
-<div id="volunteer-dashboard-root">
+<main id="volunteer-dashboard-root" role="main">
   <!-- Fallback content while React loads -->
   <div class="min-h-screen bg-gray-100 py-8">
     <div class="container mx-auto px-4">
@@ -12,7 +12,7 @@
       </div>
     </div>
   </div>
-</div>
+</main>
 
 <!-- Load React and dependencies -->
 <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
